# Antiplagiat-App

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
api-gateway/: CMakeLists.txt  Dockerfile
api-gateway/src/: main.cpp
api-gateway/src/clients/: serviceclient.cpp  serviceclient.h
api-gateway/src/config/: config.cpp  config.h
api-gateway/src/docs/: openapi.yaml
api-gateway/src/handlers/: gatewayhandlers.cpp  gatewayhandlers.h
file-analysis-service/: CMakeLists.txt  Dockerfile
file-analysis-service/src/: main.cpp
file-analysis-service/src/clients/: fileserviceclient.cpp  fileserviceclient.h
file-analysis-service/src/config/: config.cpp  config.h
file-analysis-service/src/db/: database.cpp  database.h
file-analysis-service/src/handlers/: analysishandlers.cpp  analysishandlers.h
file-analysis-service/src/models/: report.h
file-analysis-service/src/repository/: reportrepository.cpp  reportrepository.h
file-analysis-service/src/service/: analysisservice.cpp  analysisservice.h
file-storing-service/: CMakeLists.txt  Dockerfile
file-storing-service/src/: main.cpp
file-storing-service/src/config/: config.cpp  config.h
file-storing-service/src/handlers/: filehandlers.cpp  filehandlers.h
file-storing-service/src/models/: submission.h
file-storing-service/src/repository/: filerepository.cpp  filerepository.h
file-storing-service/src/service/: fileservice.cpp  fileservice.h
file-storing-service/src/utils/: hashutils.cpp  hashutils.h
init-scripts/: analysis-db.sql  files-db.sql
